fixat loading av ash och lite spacing

--- a/css/index.css
+++ b/css/index.css
@@ -231,7 +231,7 @@ body {
         .characterPreview .weaponBox .attachments {
             width:25px;
             height:100px;
-            margin:0;    
+            margin:0;
             height: 100px;
             width: 400px;
             padding:0;
@@ -319,6 +319,17 @@ body {
     }
 
 #loade {
+  float: right;
   height: 800px;
-  width: 800px;
+  width: 500px;
+  box-sizing: border-box;
+  margin-left: 0px;
+  padding-top: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+object {
+  width: 500px;
+  height: 100%;
 }
